LPD-37942 search-experiences-rest-impl: add set as Collection provider
https://liferay.atlassian.net/browse/LPD-37942
